--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 <div class="text-center p-2 bg-dark">
-  <span style="color:#fff; font-size: 20px;">Country name: <%= @country %> | Country code: <%= @country_name %></span>
+  <span style="color:#fff; font-size: 20px;">Country name: <%= @country %> | City name: <%= city_name %></span>
 </div>
 <h1>Products</h1>
 
